# fip-api

./: .env.sample  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci-bazel.yml  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MAINTAINERS  README.md  TODO  WORKSPACE.bazel  docker-compose.yml  jest.config.json  jwtKey.key  jwtKey.key.pub  nest-cli.json  package.json  tsconfig.json
.gitlab/merge_request_templates/: PULL_REQUEST_TEMPLATE.md
MISC/: AAA.js  AAA.sh  AAA_req.json  AAA_res.json  AAA_total.json  BBB.js  CCC.avsc  CCC.js  CCC.json  DDD.js
apps/at/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/at/docker/: Dockerfile
apps/at/k8s/: values.yaml
apps/at/src/: BUILD.bazel  at.config.service.spec.ts  at.config.service.ts  at.config.spec.ts  at.config.ts  at.controller.spec.ts  at.controller.ts  at.entity.repository.interface.ts  at.entity.repository.spec.ts  at.entity.repository.ts  at.entity.spec.ts  at.entity.ts  at.events.gateway.ts  (+8 more)
apps/fip-api/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/fip-api/docker/: Dockerfile
apps/fip-api/docker/development/: Dockerfile
apps/fip-api/k8s/: Chart.yaml  values.yaml
apps/fip-api/k8s/templates/: NOTES.txt  _helpers.tpl
apps/fip-api/k8s/templates/tests/: test-connection.yaml
apps/fip-api/src/: BUILD.bazel  main.ts
apps/fip-api/src/app/: app.apm.options.factory.spec.ts  app.apm.options.factory.ts  app.cache.options.factory.spec.ts  app.cache.options.factory.ts  app.config.service.spec.ts  app.config.service.ts  app.config.spec.ts  app.config.ts  app.events.gateway.spec.ts  app.events.gateway.ts  app.hash-id.service.interface.ts  app.hash-id.service.spec.ts  app.hash-id.service.ts  app.health.controller.spec.ts  app.health.controller.ts  app.health.indicator.spec.ts  app.health.indicator.ts  app.http-cache.interceptor.spec.ts  app.http-cache.interceptor.ts  app.module.interface.ts  app.module.ts  app.prom.options.factory.spec.ts  app.prom.options.factory.ts  app.sentry.options.factory.spec.ts  app.sentry.options.factory.ts  app.service.spec.ts  app.user.decorator.spec.ts  app.user.decorator.ts
apps/fip-api/src/at/: at.cache.options.factory.spec.ts  at.cache.options.factory.ts  at.clients.options.factory.spec.ts  at.clients.options.factory.ts  at.config.service.spec.ts  at.config.service.ts  at.config.spec.ts  at.config.ts  at.health.indicator.spec.ts  at.health.indicator.ts  at.module.ts  at.service.interface.ts  at.service.spec.ts  at.service.ts
apps/fip-api/src/auth/: anonym-uuid.strategy.spec.ts  anonym-uuid.strategy.ts  anonym.strategy.spec.ts  anonym.strategy.ts  auth.config.service.spec.ts  auth.config.service.ts  auth.config.spec.ts  auth.config.ts  auth.controller.spec.ts  auth.controller.ts  auth.health.indicator.spec.ts  auth.health.indicator.ts  auth.jwt.options.factory.spec.ts  auth.jwt.options.factory.ts  auth.module.ts  auth.options.factory.spec.ts  auth.service.interface.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.spec.ts  jwt.strategy.ts  local.strategy.spec.ts  local.strategy.ts  telegram.strategy.spec.ts  telegram.strategy.ts  token.strategy.spec.ts  token.strategy.ts
apps/fip-api/src/jwks/: jwks.cache.options.factory.spec.ts  jwks.cache.options.factory.ts  jwks.clients.options.factory.spec.ts  jwks.clients.options.factory.ts  jwks.config.service.spec.ts  jwks.config.service.ts  jwks.config.spec.ts  jwks.config.ts  jwks.health.indicator.spec.ts  jwks.health.indicator.ts  jwks.module.ts  jwks.service.interface.ts  jwks.service.spec.ts  jwks.service.ts
apps/fip-api/src/rt/: rt.cache.options.factory.spec.ts  rt.cache.options.factory.ts  rt.clients.options.factory.spec.ts  rt.clients.options.factory.ts  rt.config.service.spec.ts  rt.config.service.ts  rt.config.spec.ts  rt.config.ts  rt.health.indicator.spec.ts  rt.health.indicator.ts  rt.module.ts  rt.service.interface.ts  rt.service.spec.ts  rt.service.ts  rt.validate.dto.avsc
apps/fip-api/src/user/: user.cache.options.factory.spec.ts  user.cache.options.factory.ts  user.clients.options.factory.spec.ts  user.clients.options.factory.ts  user.config.service.spec.ts  user.config.service.ts  user.config.spec.ts  user.config.ts  user.controller.spec.ts  user.controller.ts  user.health.indicator.spec.ts  user.health.indicator.ts  user.module.ts  user.service.interface.ts  user.service.spec.ts  user.service.ts
apps/fip-api/test/: app.e2e-spec.ts  jest-e2e.json
apps/jwks/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/rt/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/rt/docker/: Dockerfile
apps/rt/docker/development/: Dockerfile
apps/rt/k8s/: values.yaml
apps/rt/src/: BUILD.bazel  main.ts  rt.config.service.spec.ts  rt.config.service.ts  rt.config.spec.ts  rt.config.ts  rt.controller.spec.ts  rt.controller.ts  rt.entity.repository.interface.ts  rt.entity.repository.spec.ts  rt.entity.repository.ts  rt.entity.spec.ts  rt.entity.ts  rt.events.gateway.spec.ts  rt.events.gateway.ts  rt.module.ts  rt.service.interface.ts  rt.service.spec.ts  rt.service.ts  rt.type-orm.options.factory.spec.ts  rt.type-orm.options.factory.ts
apps/rt/test/: app.e2e-spec.ts
apps/user/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
docker-compose/: docker-compose.yml
docker-compose/development/: docker-compose.yml
libs/apm/: tsconfig.lib.json
libs/common/: tsconfig.lib.json
libs/dgraph/: tsconfig.lib.json
libs/eventstore/: .gitlab-ci.yml  tsconfig.lib.json
libs/eventstore/src/: BUILD.bazel  eventstore-core.module.ts  eventstore.constant.ts  eventstore.module.interface.ts  eventstore.module.ts  eventstore.pub-sub.spec.ts  eventstore.pub-sub.ts  eventstore.service.interface.ts  eventstore.service.spec.ts  eventstore.service.ts  eventstore.util.spec.ts  eventstore.util.ts  index.ts
libs/prom/: tsconfig.lib.json
libs/sentry/: tsconfig.lib.json
scripts/: 1.js  2.js  create-kafka-toopics.sh  create-ksql-streams.sql  rt.validate.dto.json  schema-registry.js  template.avsc
(+200 files in other folders)
