load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@fip//:apps/common/bazel/jest/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:private"])

ts_config(
    name = "eventstore_ts_config",
    src = "//libs/eventstore:tsconfig.lib.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "eventstore_ts_library",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@fip/eventstore",
    runtime = "nodejs",
    tsconfig = ":eventstore_ts_config",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
        "@npm//@types/aws-lambda",
        "@npm//@types/connect",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//aws-lambda",
        "@npm//connect",
        "@npm//elastic-eventstore-node",
        "@npm//express",
        "@npm//kaop-ts",
        "@npm//rxjs",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "eventstore_test_ts_library",
    srcs = glob(["*spec.ts"]),
    runtime = "nodejs",
    deps = [
        ":eventstore_ts_library",
        "@npm//@nestjs/common",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//rxjs",
    ],
)

jest_test(
    name = "eventstore_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":eventstore_test_ts_library",
    ],
)
